--- a/app/src/main/res/layout/activity_grid_view.xml
+++ b/app/src/main/res/layout/activity_grid_view.xml
@@ -7,13 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.itgate.restaurant.activite.grillardin.MenuGrillardin">
+    tools:context="com.itgate.restaurant.activite.serveur.GridViewActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView3"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
 </RelativeLayout>
