--- a/app/src/main/res/layout/content_detail_commande.xml
+++ b/app/src/main/res/layout/content_detail_commande.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.itgate.restaurant.activite.serveur.MainActivity"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="com.itgate.restaurant.activite.serveur.DetailCommandeActivity"
+    tools:showIn="@layout/activity_detail_commande">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView4"
+        android:id="@+id/listView5"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true" />
